<resources>
    <string name="app_name">Easy Share</string>

    <string name="write_partial_video_title">Write partial video title.</string>
    <string name="start_time">Start time</string>
    <string name="time_in_min">min</string>
    <string name="time_in_second">second</string>
    <string name="select_category">Select category</string>
    <string name="add_new_category">Add</string>
    <string name="share">Share</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions">Questions</string>
    <string name="categories">Categories</string>
    <string name="saved_list">Saved listings</string>
    <string name="editor">Editor</string>
    <string name="add_question">Add question</string>
    <string name="new_video">New Video</string>
    <string name="title">Title</string>
    <string name="paste_url">Paste URL</string>
    <string name="empty_space_not_allowed">Empty space is not allowed.</string>
    <string name="url_not_valid">YouTube url is not valid.</string>
    <string name="partial_video_listing">Partial Video Listing</string>

    <string name="action_share">Share</string>
    <string name="action_play">Play</string>
    <string name="action_delete">Delete</string>
    <string name="action_editor">Go to editor</string>
</resources>

