<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/topicListScreen">

    <fragment
        android:id="@+id/topicEditorScreen"
        android:name="com.example.android.youtubeurlmaker.ui.screens.TopicEditorScreen"
        android:label="@string/editor"
        tools:layout="@layout/fragment_topic_editor_screen" />

    <fragment
        android:id="@+id/topicListScreen"
        android:name="com.example.android.youtubeurlmaker.ui.screens.TopicListScreen"
        android:label="@string/saved_list"
        tools:layout="@layout/fragment_topic_list" >
        <action
            android:id="@+id/action_topicListScreen_to_topicEditorScreen"
            app:destination="@id/topicEditorScreen"
            app:popUpTo="@+id/topicEditorScreen"
            app:popUpToInclusive="true">

            <argument
                android:name="topic"
                app:argType="com.example.android.youtubeurlmaker.data.source.local.entity.Topic"
                />
        </action>
        <action
            android:id="@+id/action_topicListScreen_to_questionsScreen"
            app:destination="@id/questionsScreen"
            app:popUpTo="@+id/topicEditorScreen"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/questionsScreen"
        android:name="com.example.android.youtubeurlmaker.ui.screens.QuestionsScreen"
        android:label="@string/partial_video_listing"
        tools:layout="@layout/fragment_questions_screen" />


</navigation>